toolkit/themes/shared/in-content/common.inc.css
/* ... */
xul|*.help-button > xul|*.button-box > xul|*.button-icon {
  width: 18px;
  height: 18px;
}

xul|*.help-button > xul|*.button-box > xul|*.button-text {
  display: none;
}

xul|*.spinbuttons-button {
  -moz-margin-start: 10px !important;
  -moz-margin-end: 2px !important;
}

xul|*.spinbuttons-up {
  margin-top: 2px !important;
  border-radius: 1px 1px 0 0;
}

xul|*.spinbuttons-down  {
  margin-bottom: 2px !important;
  border-radius: 0 0 1px 1px;
}

xul|*.spinbuttons-button > xul|*.button-box {
  padding: 1px 5px 2px !important;
}

xul|*.spinbuttons-up > xul|*.button-box > xul|*.button-icon {
  list-style-image: url("chrome://global/skin/arrow/arrow-up.gif");
}

xul|*.spinbuttons-up[disabled="true"] > xul|*.button-box > xul|*.button-icon {
  list-style-image: url("chrome://global/skin/arrow/arrow-up-dis.gif");
}

xul|*.spinbuttons-down > xul|*.button-box > xul|*.button-icon {
  list-style-image: url("chrome://global/skin/arrow/arrow-dn.gif");
}

xul|*.spinbuttons-down[disabled="true"] > xul|*.button-box > xul|*.button-icon {
  list-style-image: url("chrome://global/skin/arrow/arrow-dn-dis.gif");
}

xul|menulist:not([editable="true"]) > xul|*.menulist-dropmarker {
  -moz-appearance: none;
  -moz-margin-end: 4px;
  padding: 0;
  border: none;
  background-color: transparent;
  list-style-image: url("chrome://global/skin/in-content/dropdown.svg#dropdown");
}

xul|menulist:not([editable="true"]) > xul|*.menulist-dropmarker > xul|*.dropmarker-icon {
  width: 18px;
  height: 18px;
}

xul|menulist[disabled="true"]:not([editable="true"]) > xul|*.menulist-dropmarker {
  list-style-image: url("chrome://global/skin/in-content/dropdown.svg#dropdown-disabled")
}

xul|menulist > xul|menupopup,
xul|button[type="menu"] > xul|menupopup {
  -moz-appearance: none;
  border: 1px solid rgba(23,50,77,0.4);
  border-radius: 2px;
  background-color: #fff;
}

xul|menulist > xul|menupopup xul|menu,
xul|menulist > xul|menupopup xul|menuitem,
xul|button[type="menu"] > xul|menupopup xul|menu,
xul|button[type="menu"] > xul|menupopup xul|menuitem {
  -moz-appearance: none;
  font-size: 1em;
  color: #333;
  padding-top: 0.2em;
  padding-bottom: 0.2em;
  -moz-padding-start: 10px;
  -moz-padding-end: 30px;
}

xul|menulist > xul|menupopup > xul|menu[_moz-menuactive="true"],
xul|menulist > xul|menupopup > xul|menuitem[_moz-menuactive="true"],
xul|button[type="menu"] > xul|menupopup > xul|menu[_moz-menuactive="true"],
xul|button[type="menu"] > xul|menupopup > xul|menuitem[_moz-menuactive="true"] {
  color: #333;
  background-color: rgba(0,149,221,0.25);
}

xul|menulist > xul|menupopup > xul|menu[selected="true"],
xul|menulist > xul|menupopup > xul|menuitem[selected="true"],
xul|button[type="menu"] > xul|menupopup > xul|menu[selected="true"],
xul|button[type="menu"] > xul|menupopup > xul|menuitem[selected="true"] {
  color: #fff;
  background-color: #0095DD;
}

xul|menulist > xul|menupopup xul|menuseparator,
xul|button[type="menu"] > xul|menupopup xul|menuseparator {
  -moz-appearance: none;
  margin-top: 2px;
  margin-bottom: 2px;
  padding: 0;
  border-top: 1px solid rgba(23,50,77,0.4);
  border-bottom: none;
}

/* textboxes */

*|textbox {
  -moz-appearance: none;
  height: 30px;
  color: #333;
  line-height: 20px;
  text-shadow: 0 1px 1px #fefffe;
  padding-right: 10px;
  padding-left: 10px;
  border: 1px solid #c1c1c1;
  -moz-border-top-colors: none !important;
  -moz-border-right-colors: none !important;
  -moz-border-bottom-colors: none !important;
  -moz-border-left-colors: none !important;
  border-radius: 2px;
  background-color: #fff;
}

html|textbox:focus,
xul|textbox[focused] {
  border-color: #0095dd;
}

html|textbox:disabled,
xul|textbox[disabled="true"] {
  opacity: 0.5;
}

/* Links */

html|a,
xul|*.text-link,
xul|*.inline-link {
  font-size: 1.25rem;
  line-height: 22px;
  color: #0095dd;
  text-decoration: none;
}

html|a:hover,
xul|*.text-link:hover,
xul|*.inline-link:hover {
  color: #4cb1ff;
  text-decoration: none;
}

html|a:hover:active,
xul|*.text-link:hover:active,
xul|*.inline-link:hover:active {
  color: #ff9500;
  text-decoration: none;
}

/* Checkboxes and radio buttons */

xul|checkbox {
  -moz-margin-start: 0;
}

xul|*.checkbox-check {
  -moz-appearance: none;
  width: 23px;
  height: 23px;
  border-radius: 2px;
  border: 1px solid #c1c1c1;
  -moz-margin-end: 10px;
  background-color: #f1f1f1;
  background-image: linear-gradient(#fff, rgba(255,255,255,0.8));
  background-position: center center;
  background-repeat: no-repeat;
  box-shadow: 0 1px 1px 0 #fff, inset 0 2px 0 0 rgba(0,0,0,0.03);
}

xul|checkbox:not([disabled="true"]):hover > xul|*.checkbox-check {
  border-color: #0095dd;
}

xul|*.checkbox-check[checked] {
  background-image: url("chrome://global/skin/in-content/check.png"),
                    /* !important needed to override toolkit !important rule */
                    linear-gradient(#fff, rgba(255,255,255,0.8)) !important;
}

xul|checkbox[disabled="true"] > xul|*.checkbox-check {
  opacity: 0.5;
}

xul|*.checkbox-label-box {
  -moz-margin-start: -1px; /* negative margin for the transparent border */
  -moz-padding-start: 0;
}

@media (min-resolution: 2dppx) {
  xul|*.checkbox-check[checked] {
    background-size: 12px 12px, auto;
    background-image: url("chrome://global/skin/in-content/check@2x.png"),
                      linear-gradient(#fff, rgba(255,255,255,0.8)) !important;
  }
}

xul|richlistitem > xul|*.checkbox-check {
  margin: 3px 6px;
}

xul|*.radio-check {
  -moz-appearance: none;
  width: 23px;
  height: 23px;
  border: 1px solid #c1c1c1;
  border-radius: 50%;
  -moz-margin-end: 10px;
  background-color: #f1f1f1;
  background-image: linear-gradient(#fff, rgba(255,255,255,0.80));
  box-shadow: 0 1px 1px 0 #fff, inset 0 2px 0 0 rgba(0,0,0,0.03);
}

xul|radio:not([disabled="true"]):hover > xul|*.radio-check {
  border-color: #0095dd;
}
/* ... */

